Fixed spacing between abuse options.

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1265,6 +1265,13 @@
     }
   }
 }
+
+.report__abuse-options {
+  .crayons-field + .crayons-field {
+    margin-top: var(--su-2);
+  }
+}
+
 .report__abuse__button {
   width: 135px;
 }
